<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookJobActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Service" />

            <Spinner
                android:id="@+id/serviceSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Availability" />

                <TextView
                    android:id="@+id/afternoonText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Afternoon" />

                <TextView
                    android:id="@+id/eveningText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Evening" />

                <TextView
                    android:id="@+id/morningText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Morning :" />

            </LinearLayout>

            <TextView
                android:id="@+id/availabilityErrorText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.25"
                android:gravity="bottom|right"
                android:paddingRight="10dp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

        </LinearLayout>

        <TableLayout
            android:id="@+id/availTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunday" />

                <CheckBox
                    android:id="@+id/sundayMorningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning" />

                <CheckBox
                    android:id="@+id/sundayAfternoonCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon" />

                <CheckBox
                    android:id="@+id/sundayEveningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Monday" />

                <CheckBox
                    android:id="@+id/mondayMorningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning" />

                <CheckBox
                    android:id="@+id/mondayAfternoonCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon" />

                <CheckBox
                    android:id="@+id/mondayEveningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tuesday" />

                <CheckBox
                    android:id="@+id/tuesdayMorningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning" />

                <CheckBox
                    android:id="@+id/tuesdayAfternoonCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon" />

                <CheckBox
                    android:id="@+id/tuesdayEveningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wednesday" />

                <CheckBox
                    android:id="@+id/wednesdayMorningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning" />

                <CheckBox
                    android:id="@+id/wednesdayAfternoonCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon" />

                <CheckBox
                    android:id="@+id/wednesdayEveningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thursday" />

                <CheckBox
                    android:id="@+id/thursdayMorningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning" />

                <CheckBox
                    android:id="@+id/thursdayAfternoonCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon" />

                <CheckBox
                    android:id="@+id/thursdayEveningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Friday" />

                <CheckBox
                    android:id="@+id/fridayMorningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning" />

                <CheckBox
                    android:id="@+id/fridayAfternoonCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon" />

                <CheckBox
                    android:id="@+id/fridayEveningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Saturday" />

                <CheckBox
                    android:id="@+id/saturdayMorningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morning" />

                <CheckBox
                    android:id="@+id/saturdayAfternoonCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afternoon" />

                <CheckBox
                    android:id="@+id/saturdayEveningCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/urgencyText"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Urgency" />

            <Spinner
                android:id="@+id/urgencySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timeText"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time" />

            <Spinner
                android:id="@+id/timeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <TextView
                android:id="@+id/timeText2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="hours" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Min rating" />

            <RatingBar
                android:id="@+id/minRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:isIndicator="false"
                android:numStars="5"
                android:scaleX=".5"
                android:scaleY=".5"
                android:stepSize="1" />
        </LinearLayout>

        <Button
            android:id="@+id/findAProviderBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="handleForm"
            android:text="@string/find_a_provider" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>